--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
     "react": "^18",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.12.0",
